# BiYe

./: .gitignore  README.md  pyproject.toml
docs/: system_architecture.md
src/fence_inspection/: __init__.py  main.py  models.py  service.py  storage.py  webapp.py
src/fence_inspection/modules/: acquisition.py  detection.py  enhancement.py  scheduler.py  tracking.py
tests/: test_system.py  test_webapp.py
