[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fence-inspection-system"
version = "0.1.0"
description = "Layered drone fence anomaly inspection prototype"
requires-python = ">=3.10"

[tool.pytest.ini_options]
pythonpath = ["src", "."]
